2003-11-21 Braden McDaniel  <braden@endoframe.com>

	Replaced "w", "h", "components", and "pixels" members of
	"texture_node" with an "image" member that returns an
	"openvrml::image".

	* src/libopenvrml/openvrml/node.cpp
	* src/libopenvrml/openvrml/node.h
	* src/libopenvrml/openvrml/vrml97node.cpp
	* src/libopenvrml/openvrml/vrml97node.h

2003-11-20 Braden McDaniel  <braden@endoframe.com>

	Modified lookat to use SDL instead of glut.

	* README:  Updated description of dependencies.
	* configure.ac:  Check for SDL instead of glut.
	* openvrml.spec.in:  Require SDL instead of glut.
	* m4/Makefile.am:  Removed "ax_check_glut.m4" from EXTRA_DIST.
	* m4/ax_check_glut.m4:  Removed file.
	* src/lookat/Makefile.am:  Apply SDL flags instead of glut flags.
	* src/lookat/ViewerGlut.cpp:  Removed file.
	* src/lookat/ViewerGlut.h:  Removed file.
	* src/lookat/lookat.cpp:  Use SDL instead of glut.

2003-11-18  Braden McDaniel  <braden@endoframe.com>

	Apply std::hex manipulator when reading hexadecimal integers.

	* src/libopenvrml/openvrml/Vrml97Parser.cpp
	* src/libopenvrml/openvrml/Vrml97Parser.g

2003-11-18  Braden McDaniel  <braden@endoframe.com>

	Removed some debugging output.

	* src/libopenvrml/openvrml/basetypes.h
	* src/libopenvrml/openvrml/vrml97node.cpp
	* src/libopenvrml-gl/openvrml/gl/viewer.cpp

2003-11-18  Braden McDaniel  <braden@endoframe.com>

	Added image basic type.

	* src/libopenvrml/openvrml/ScriptJDK.cpp
	* src/libopenvrml/openvrml/Vrml97Parser.cpp
	* src/libopenvrml/openvrml/Vrml97Parser.g
	* src/libopenvrml/openvrml/Vrml97Parser.hpp
	* src/libopenvrml/openvrml/basetypes.cpp
	* src/libopenvrml/openvrml/basetypes.h
	* src/libopenvrml/openvrml/field.cpp
	* src/libopenvrml/openvrml/field.h
	* src/libopenvrml/openvrml/script.cpp
	* src/libopenvrml/openvrml/vrml97node.cpp
	* src/libopenvrml-gl/openvrml/gl/viewer.cpp

2003-11-18  Braden McDaniel  <braden@endoframe.com>

	* src/libopenvrml-gl/openvrml/gl/viewer.cpp:  On second thought,